--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   # A package containing the most ~5000 used English words and some utility functions.
   english_words: ^3.1.5
+  image_picker: ^0.4.10
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
